--- a/package.xml
+++ b/package.xml
@@ -24,14 +24,11 @@
 	</requiredpackages>
 
 	<instructions type="install">
-		<acpmenu>acpmenu.xml</acpmenu>
-		<acptemplates>acptemplates.tar</acptemplates>
+	<!-- 	<acpmenu>acpmenu.xml</acpmenu>
+		<acptemplates>acptemplates.tar</acptemplates>-->
 		<eventlistener>eventlistener.xml</eventlistener>
 		<files>files.tar</files>
-		<languages languagecode="de">languages/de.xml</languages>
-		<languages languagecode="de-informal">languages/de-informal.xml</languages>
-		<languages languagecode="en">languages/en.xml</languages>
 		<sql>install.sql</sql>
-		<templates>templates.tar</templates>
+		<options>options.xml</options>
 	</instructions>
 </package>
