--- a/package.xml
+++ b/package.xml
@@ -9,8 +9,8 @@
 		<packagedescription language="de-informal"><![CDATA[Das Paket beschert "unbeliebten Nutzern" zufällig ausgewählte Fehler.]]></packagedescription>
 		<standalone>0</standalone>
 		<isunique>1</isunique>
-		<version>1.0.0 Beta 1</version> <!-- Codename "THE UGLY" -->
-		<date>2010-10-06</date>
+		<version>1.0.0 Beta 2</version> <!-- Codename "THE UGLY" -->
+		<date>2010-11-23</date>
 		<plugin>com.woltlab.wcf</plugin>
 	</packageinformation>
 
@@ -24,11 +24,25 @@
 	</requiredpackages>
 
 	<instructions type="install">
-	<!-- 	<acpmenu>acpmenu.xml</acpmenu>
-		<acptemplates>acptemplates.tar</acptemplates>-->
+		<languages languagecode="de">languages/de.xml</languages>
+		<languages languagecode="de-informal">languages/de-informal.xml</languages>
+		<languages languagecode="en">languages/en.xml</languages>
 		<eventlistener>eventlistener.xml</eventlistener>
 		<files>files.tar</files>
+		<templates>templates.tar</templates>
+		<groupoptions>groupoptions.tar</groupoptions>
 		<sql>install.sql</sql>
+		<options>options.xml</options>
+	</instructions>
+	
+	<instructions type="update" fromversion="1.0.0 Beta 1">
+		<languages languagecode="de">languages/de.xml</languages>
+		<languages languagecode="de-informal">languages/de-informal.xml</languages>
+		<languages languagecode="en">languages/en.xml</languages>
+		<eventlistener>eventlistener.xml</eventlistener>
+		<files>files.tar</files>
+		<templates>templates.tar</templates>
+		<groupoptions>groupoptions.tar</groupoptions>
 		<options>options.xml</options>
 	</instructions>
 </package>
