--- a/package.xml
+++ b/package.xml
@@ -42,7 +42,7 @@
 		<eventlistener>eventlistener.xml</eventlistener>
 		<files>files.tar</files>
 		<templates>templates.tar</templates>
-		<groupoptions>groupoptions.tar</groupoptions>
+		<groupoptions>groupoptions.xml</groupoptions>
 		<options>options.xml</options>
 	</instructions>
 </package>
