--- a/package.xml
+++ b/package.xml
@@ -9,8 +9,8 @@
 		<packagedescription language="de-informal"><![CDATA[Das Paket beschert "unbeliebten Nutzern" zufällig ausgewählte Fehler.]]></packagedescription>
 		<standalone>0</standalone>
 		<isunique>1</isunique>
-		<version>1.0.0 Beta 2</version> <!-- Codename "THE UGLY" -->
-		<date>2010-11-23</date>
+		<version>1.0.0 Beta 3</version> <!-- Codename "THE UGLY" -->
+		<date>2010-11-25</date>
 		<plugin>com.woltlab.wcf</plugin>
 	</packageinformation>
 
@@ -41,6 +41,15 @@
 		<languages languagecode="de-informal">languages/de-informal.xml</languages>
 		<languages languagecode="en">languages/en.xml</languages>
 		<eventlistener>eventlistener.xml</eventlistener>
+		<files>files.tar</files>
+		<templates>templates.tar</templates>
+		<groupoptions>groupoptions.xml</groupoptions>
+		<options>options.xml</options>
+	</instructions>
+	<instructions type="update" fromversion="1.0.0 Beta 1">
+		<languages languagecode="de">languages/de.xml</languages>
+		<languages languagecode="de-informal">languages/de-informal.xml</languages>
+		<languages languagecode="en">languages/en.xml</languages>
 		<files>files.tar</files>
 		<templates>templates.tar</templates>
 		<groupoptions>groupoptions.xml</groupoptions>
