--- a/package.xml
+++ b/package.xml
@@ -9,7 +9,7 @@
 		<packagedescription language="de-informal"><![CDATA[Das Paket beschert "unbeliebten Nutzern" zufällig ausgewählte Fehler.]]></packagedescription>
 		<standalone>0</standalone>
 		<isunique>1</isunique>
-		<version>1.0.0 Beta 4</version> <!-- Codename "THE UGLY" -->
+		<version>1.0.0 RC 1</version> <!-- Codename "THE UGLY" -->
 		<date>2010-11-26</date>
 		<plugin>com.woltlab.wcf</plugin>
 	</packageinformation>
@@ -21,18 +21,19 @@
 
 	<requiredpackages>
 		<requiredpackage minversion="1.1.3">com.woltlab.wcf</requiredpackage>
+		<requiredpackage minversion="1.1.3">com.woltlab.wcf.page.user.profile</requiredpackage>
 	</requiredpackages>
 
 	<instructions type="install">
+		<eventlistener>eventlistener.xml</eventlistener>
+		<files>files.tar</files>
+		<groupoptions>groupoptions.xml</groupoptions>
 		<languages languagecode="de">languages/de.xml</languages>
 		<languages languagecode="de-informal">languages/de-informal.xml</languages>
 		<languages languagecode="en">languages/en.xml</languages>
-		<eventlistener>eventlistener.xml</eventlistener>
-		<files>files.tar</files>
 		<script>acp/install.php</script>
-		<templates>templates.tar</templates>
-		<groupoptions>groupoptions.xml</groupoptions>
 		<sql>install.sql</sql>
+		<templates>templates.tar</templates>
 		<options>options.xml</options>
 	</instructions>
 </package>
