--- a/package.xml
+++ b/package.xml
@@ -31,7 +31,7 @@
 		<languages languagecode="de">languages/de.xml</languages>
 		<languages languagecode="de-informal">languages/de-informal.xml</languages>
 		<languages languagecode="en">languages/en.xml</languages>
-		<script>acp/install.php</script>
+		<script>acp/uglyInstall.php</script>
 		<sql>install.sql</sql>
 		<templates>templates.tar</templates>
 		<options>options.xml</options>
